--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
 
         <activity android:name=".ui.activity.PoseLandmarkerActivity" />
         <activity android:name=".ui.activity.AnimalSelectionActivity" />
+        <activity android:name=".game.GameActivity" />
 
     </application>
 
